[gd_scene load_steps=5 format=2]

[ext_resource path="res://gui/theme.tres" type="Theme" id=1]
[ext_resource path="res://gui/buttons/Action.tscn" type="PackedScene" id=2]
[ext_resource path="res://content/dome/tutorials/StationTutorial.gd" type="Script" id=3]
[ext_resource path="res://content/dome/dome1/station/single.png" type="Texture" id=4]

[node name="StationTutorial" type="MarginContainer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -479.0
margin_top = -64.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource( 1 )
script = ExtResource( 3 )
moveOutAfter = 60.0
moveInDelay = 3.0
triggerDuringWave = true
minTimeToWave = 0.0

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 513.0
margin_bottom = 147.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 485.0
margin_bottom = 119.0

[node name="Station" type="TextureRect" parent="PanelContainer/HBoxContainer"]
margin_right = 128.0
margin_bottom = 107.0
rect_min_size = Vector2( 128, 104 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
margin_left = 144.0
margin_right = 473.0
margin_bottom = 107.0

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_right = 329.0
margin_bottom = 25.0
text = "level.tutorial.station.popup_1"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 41.0
margin_right = 329.0
margin_bottom = 66.0
custom_constants/separation = 6

[node name="Label1" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_bottom = 25.0

[node name="ActionUse" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 6.0
margin_right = 6.0
margin_bottom = 25.0
action = "keeper_use"

[node name="Label2" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 12.0
margin_right = 12.0
margin_bottom = 25.0

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 82.0
margin_right = 329.0
margin_bottom = 107.0
custom_constants/separation = 6

[node name="Label3" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_bottom = 25.0

[node name="Action" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer2" instance=ExtResource( 2 )]
margin_left = 6.0
margin_right = 6.0
margin_bottom = 25.0
action = "dome_battle"

[node name="Label4" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 12.0
margin_right = 12.0
margin_bottom = 25.0
